# mcp-python-helper

./: LICENSE  Makefile  README.md  example.py  lsp_pyright.py  pyproject.toml  pyrightconfig.json  test.py  test_pyright_cli.py  testpyright.py
src/mcp_python_helper/: __init__.py  ast_tools.py  lsp_client.py  server.py
src/mcp_python_helper/test_fixtures/: sample_python_code.py
src/mcp_python_helper/tools/: __init__.py  edit_python_code.py  locate_symbol.py
src/mcp_python_helper/types/: astor.pyi
src/mcp_python_helper/utils/: ast_utils.py  pyright_lsp.py
src/mcp_python_helper/utils/lsp/: __init__.py  base.py  operations.py  types.py
tests/: conftest.py  test_locate_symbol.py  test_pyright_lsp.py
tests/fixtures/sample_project/: main.py  pyrightconfig.json
