[project]
name = "mcp-python-helper"
version = "0.1.0"
description = "Tools to help with python projects"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
 "astor>=0.8.1",
 "mcp>=1.1.0",
 "pydantic>=2.10.3",
 "pylance>=0.20.0",
 "pyright>=1.1.390",
 "python-language-server>=0.36.2",
 "python-lsp-server>=1.12.0",
]
[[project.authors]]
name = "Phil"
email = "isaac.phil@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-python-helper = "mcp_python_helper:main"
