[project]
name = "mcp-python-helper"
version = "0.1.0"
description = "Tools to help with python projects"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "astor>=0.8.1",
    "mcp>=1.1.0",
    "pydantic>=2.10.3",
    "pylance>=0.20.0",
    "pyright>=1.1.390",
    "python-language-server>=0.36.2",
    "python-lsp-server>=1.12.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.3",
    "mypy>=1.7.0",
]

[[project.authors]]
name = "Phil"
email = "isaac.phil@gmail.com"

[project.scripts]
mcp-python-helper = "mcp_python_helper:main"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportUnusedImport = true
reportUnusedVariable = true
reportMissingTypeStubs = true
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
enableTypeIgnoreComments = false

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "TCH",  # type-checking
    "TID",  # tidy imports
    "ERA",  # eradicate
]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
