[project]
name = "mcp-python-helper"
version = "0.1.0"
description = "Tools to help with python projects"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "astor>=0.8.1",
    "mcp>=1.1.0",
    "pydantic>=2.10.3",
    "pyright>=1.1.390",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.3",
]

[[project.authors]]
name = "Phil"
email = "isaac.phil@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-python-helper = "mcp_python_helper:main"

[tool.pyright]
include = ["."]
exclude = [
  "**/sample_python_code.py",
  "**/node_modules",
  "**/__pycache__",
  ".venv",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportUnusedImport = true
reportUnusedVariable = true
reportMissingTypeStubs = true
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
stubPath = "src/mcp_python_helper/types"

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "TCH",  # type-checking
    "TID",  # tidy imports
    "ERA",  # eradicate
]
lint.ignore = [
  "E501" # line length
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

